--- a/backend/package.json
+++ b/backend/package.json
@@ -9,24 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
+    "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^5.22.0",
-    "next": "16.0.3",
-    "next-auth": "^4.24.13",
-    "openai": "^6.9.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "stripe": "^20.0.0"
+    "next": "^14.2.15",
+    "next-auth": "^4.24.10",
+    "openai": "^4.73.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "stripe": "^17.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.15",
+    "postcss": "^8",
     "prisma": "^5.22.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
