--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lab:run-batch": "NODE_ENV=production ts-node scripts/runPromptLabBatch.ts",
+    "lab:batch": "tsx scripts/runPromptLabBatch.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@google-cloud/storage": "^7.17.3",
     "@prisma/client": "^5.22.0",
+    "dotenv": "^16.4.5",
     "next": "^14.2.15",
     "next-auth": "^4.24.10",
     "openai": "^4.73.0",
@@ -27,6 +31,8 @@
     "postcss": "^8",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
