--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "lab:run-batch": "NODE_ENV=production ts-node scripts/runPromptLabBatch.ts",
-    "lab:batch": "tsx scripts/runPromptLabBatch.ts"
+    "lab:batch": "tsx scripts/runPromptLabBatch.ts",
+    "lab:cron:local": "tsx scripts/promptLabCronServer.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
